chore: baseline deck WIP before story and jokes fixes